@@ -7,7 +7,7 @@ import uk.gov.pay.connector.model.domain.RefundEntityFixture;
 import uk.gov.pay.connector.refund.model.domain.RefundEntity;
 import uk.gov.pay.connector.refund.model.domain.RefundStatus;
 
-import java.util.Arrays;
+import java.util.List;
 
 import static org.hamcrest.Matchers.is;
 import static org.junit.Assert.assertThat;
@@ -17,7 +17,7 @@ public class RefundCalculatorTest {
     public void getTotalAmountToBeRefunded_shouldReturnFullAmount_whenNoCorporateSurchargeAndNoRefunds() {
         ChargeEntity chargeEntity = ChargeEntityFixture.aValidChargeEntity().build();
 
-        long actualAmount = RefundCalculator.getTotalAmountAvailableToBeRefunded(chargeEntity);
+        long actualAmount = RefundCalculator.getTotalAmountAvailableToBeRefunded(chargeEntity, List.of());
         long expectedAmount = chargeEntity.getAmount();
 
         assertThat(actualAmount, is(expectedAmount));
@@ -27,9 +27,10 @@ public class RefundCalculatorTest {
     public void getTotalAmountToBeRefunded_shouldReturnRemainingAmount_whenNoCorporateSurchargeAndHasRefunds() {
         RefundEntity refundedRefund = RefundEntityFixture.aValidRefundEntity().withAmount(10L).withStatus(RefundStatus.REFUNDED).build();
         RefundEntity createdRefund = RefundEntityFixture.aValidRefundEntity().withAmount(20L).withStatus(RefundStatus.CREATED).build();
-        ChargeEntity chargeEntity = ChargeEntityFixture.aValidChargeEntity().withRefunds(Arrays.asList(refundedRefund, createdRefund)).build();
+        ChargeEntity chargeEntity = ChargeEntityFixture.aValidChargeEntity().build();
+        List<RefundEntity> refundEntityList = List.of(refundedRefund, createdRefund);
 
-        long actualAmount = RefundCalculator.getTotalAmountAvailableToBeRefunded(chargeEntity);
+        long actualAmount = RefundCalculator.getTotalAmountAvailableToBeRefunded(chargeEntity, refundEntityList);
         long expectedAmount = chargeEntity.getAmount() - refundedRefund.getAmount() - createdRefund.getAmount();
 
         assertThat(actualAmount, is(expectedAmount));
@@ -40,7 +41,7 @@ public class RefundCalculatorTest {
         long corporateSurcharge = 250L;
         ChargeEntity chargeEntity = ChargeEntityFixture.aValidChargeEntity().withCorporateSurcharge(corporateSurcharge).build();
 
-        long actualAmount = RefundCalculator.getTotalAmountAvailableToBeRefunded(chargeEntity);
+        long actualAmount = RefundCalculator.getTotalAmountAvailableToBeRefunded(chargeEntity, List.of());
         long expectedAmount = chargeEntity.getAmount() + corporateSurcharge;
 
         assertThat(actualAmount, is(expectedAmount));
@@ -53,10 +54,9 @@ public class RefundCalculatorTest {
         RefundEntity createdRefund = RefundEntityFixture.aValidRefundEntity().withAmount(20L).withStatus(RefundStatus.CREATED).build();
         ChargeEntity chargeEntity = ChargeEntityFixture.aValidChargeEntity()
                 .withCorporateSurcharge(corporateSurcharge)
-                .withRefunds(Arrays.asList(refundedRefund, createdRefund))
                 .build();
 
-        long actualAmount = RefundCalculator.getTotalAmountAvailableToBeRefunded(chargeEntity);
+        long actualAmount = RefundCalculator.getTotalAmountAvailableToBeRefunded(chargeEntity, List.of(refundedRefund, createdRefund));
         long expectedAmount = chargeEntity.getAmount() + corporateSurcharge - refundedRefund.getAmount() - createdRefund.getAmount();
 
         assertThat(actualAmount, is(expectedAmount));
@@ -69,11 +69,7 @@ public class RefundCalculatorTest {
         RefundEntity refundedRefund = RefundEntityFixture.aValidRefundEntity().withAmount(30L).withStatus(RefundStatus.REFUNDED).build();
         RefundEntity errorRefund = RefundEntityFixture.aValidRefundEntity().withAmount(30L).withStatus(RefundStatus.REFUND_ERROR).build();
 
-        ChargeEntity chargeEntity = ChargeEntityFixture.aValidChargeEntity()
-                .withRefunds(Arrays.asList(createdRefund, submittedRefund, refundedRefund, errorRefund))
-                .build();
-
-        long actualAmount = RefundCalculator.getRefundedAmount(chargeEntity);
+        long actualAmount = RefundCalculator.getRefundedAmount(List.of(createdRefund, submittedRefund, refundedRefund, errorRefund));
 
         // refunds with status of REFUND_ERROR should not be included in returned amount
         long expectedAmount = createdRefund.getAmount() + submittedRefund.getAmount() + refundedRefund.getAmount();
